# acoustics-agent

./: .gitignore  CLAUDE.md  CLAUDE_ZH.md  LICENSE  README.md  README_ZH.md  pyproject.toml  requirements.txt
configs/: README.md  example.yaml
docs/: usage.md  usage_zh.md
pyacoustics/: __init__.py  config.py  environment.py  plot.py  schema.py  simulation.py
pyacoustics/solvers/: __init__.py  external.py  external_io.py
skills/: make_env.py  plot_sim.py  run_sim.py
tests/: analyze_diff.py  run_all_comparisons.py  test_auto_beams.py
tests/Munk/: munk.yaml  munk_kraken.yaml  munkk_ref.yaml  run_bellhop_comparison.py  test_munk.py
tests/arctic/: arctic.yaml  test_arctic.py
tests/bottom_gradient/: bottom_gradient.yaml  test_bottom_gradient.py
tests/deep_water/: deep_water.yaml  test_deep_water.py
tests/dickins/: dickins.yaml  test_dickins.py
tests/free_space/: free_space.yaml  test_free_space.py
tests/gulf/: gulf.yaml  test_gulf.py
tests/head_wave/: head_wave.yaml  test_head_wave.py
tests/iso/: iso.yaml  test_iso.py
tests/leaky_munk/: leaky_munk.yaml  test_leaky_munk.py
tests/lloyd/: lloyd.yaml  test_lloyd.py
tests/pekeris/: pekeris.yaml  pekeris_kraken.yaml  test_pekeris.py
tests/rap_water/: rap_water.yaml  test_rap_water.py
tests/rigid_pekeris/: rigid_pekeris.yaml  test_rigid_pekeris.py
tests/sbcx/: sbcx.yaml  test_sbcx.py
tests/sduct/: sduct.yaml  test_sduct.py
tests/sed_atten/: sed_atten.yaml  test_sed_atten.py
tests/shaded_source/: shaded_source.yaml  test_shaded_source.py
tests/shallow_water/: shallow_water.yaml  (+1 more)
(+22 files in other folders)
